<resources>
    <string name="app_name">Logica App</string>
    <string name="top_text">Conjunction (AND)</string>
    <string name="answer_text">The Correct number of answers is: %d</string>
    <string name="string_a">A</string>
    <string name="string_b">B</string>
    <string name="string_t">T</string>
    <string name="string_f">F</string>
    <string name="string_a_or_b">A ^ B</string>
    <string name="submit">SUBMIT</string>
</resources>
